--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,11 @@ body{
   color: var(--text-dark);
   width: 100%;
   padding: var(--spacing-small);
-  background-color: blue;
+  background-color: #FFF;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 
@@ -33,8 +37,7 @@ p{
   font-family: var(--p-font);
   font-size: var(--p-size);
   font-weight: 400;
-  line-height: var(--p-height);
-  margin: var(--spacing-small);
+  line-height: var(--p-height); 
 }
 
 a{
@@ -56,6 +59,7 @@ a:hover{
   color: var(--text-light);
   padding: var(--spacing-medium) var(--spacing-large);
   border: none;
+  margin: 15px;
 }
 
 .primary-button:hover{
@@ -93,4 +97,190 @@ a:hover{
 
 .with-arrow > img{
   transition: 0.25s ease;
+}
+
+/*NAV*/
+.navbar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: var(--standard-width);
+  padding: 0 var(--spacing-medium);
+}
+
+.menu-links{
+  color: var(--text-dark);
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu-links a{
+ margin: var(--spacing-medium); 
+}
+.menu-links a:hover{
+ text-decoration: underline;
+}
+
+.menu-icons{
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu-icons a{
+  margin: var(--spacing-small);
+}
+
+.section-container {
+  width: 100%;
+  max-width: var(--standard-width);
+}
+
+.two-column{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  margin: 60px 0 60px 0px;
+}
+
+.two-column .col-left{
+ width: 50%;
+ box-sizing: border-box;
+ padding: 0 0 0 30px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+transform: translateX(50px);
+}
+
+.two-column .col-right{
+  width: 50%;
+  box-sizing: border-box;
+  padding: 0 0 0 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+
+}
+
+.hero-img{
+  width: 14rem;
+  border: 1.2px solid black;
+  border-radius: 8px;
+}
+
+.hero-img-2{
+  width: 12.2rem;
+  border: 1.2px solid black;
+  border-radius: 8px;
+  margin: var(--spacing-small);
+}
+
+.hero-img-container{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 100px 0;
+}
+
+
+.highly-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0 30px 0;
+}
+
+.highly-container img{
+  margin: 10px;
+}
+
+.highly-h2{
+  margin: 50px 0 0 100px;
+}
+
+
+.camy{
+  text-align: center;
+}
+
+.camy-btn{
+  transform: translateX(450px);
+}
+
+
+.pushing-h2{
+  text-align: center;
+  margin: 40px 0 40px 0;
+}
+
+
+.pushing-img{
+  width: 300px;
+  margin: 10px;
+  border: 1.2px solid black;
+  border-radius: 8px;
+}
+
+.pushing-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 50px 0 80px 0;
+}
+
+.pushing-left{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.pushing-right{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+
+.socials-content{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+.socials-img{
+  width: 300px;
+  border: 1px solid grey;
+  border-radius: 8px; 
+  margin: 10px;
+}
+
+.socials-img-3{
+  width: 360px;
+  margin: 10px;
+   border: 1px solid grey;
+  border-radius: 8px; 
+}
+
+.circle{
+  width: 60px;
+  height: 60px;
+  background-color: var(--green-secondary);
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  left: 180px;
+  bottom: -10px;
 }
