--- a/index.css
+++ b/index.css
@@ -1,120 +1,144 @@
-.hero{
-  width: 100%;
-  height: 600px;
+
+.grid{
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  gap: 10px;
+  padding: 0 20px 0 20px;
+}
+
+  #main-logo{
+  padding-bottom: 12px; 
+}
+
+.navbar a {
+  justify-self: center;
+  grid-column: span 8;
+}
+
+#hero{
+  padding: 20px;
+}
+
+.primary-button-hero{
+  font-family: var(--main-font);
+  font-size: var(--button-size);
+  font-weight: 400;
+  border-radius: 40px;
+  background-color: var(--green-main);
+  color: var(--text-light);
+  border: none;
+  width: 250px;
+  height: 50px;
+  margin: 8px 0 0 30px;
+}
+
+.primary-button-hero:hover{
+  background-color: var(--green-secondary);
+  cursor: pointer;
+  transition: all 0.20s ease;
+  font-weight: 700;
+}
+
+.hero-text{
+  grid-column: 1/9;
+}
+
+.hero-jackets{
+  grid-column: 2/4;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 0 40px 0;
-  background: linear-gradient(121deg, #FFF6ED 23.7%, #F1F1F1 137.95%); 
+  
 }
 
-.hero-h1{
-max-width: 480px;
-font-size: 4.5rem;
-}
-
-.hero-img{
-  height: 250px;
-  border: 1.2px solid black;
+.hero-jackets img{
+  width: 150%;
   border-radius: 8px;
-  margin-right: 10px;
+  border: 0.8 solid black;
+  margin: 0 6px; 
 }
 
-.hero-img-2{
-  height: 250px;
-  border: 1.2px solid black;
-  border-radius: 8px;
- 
+.hero-text a{
+  margin: 20px;
 }
-
-.hero-img-container{
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  margin: 100px 20px;
-}
-
 /*-------HIGHLY RATED-----*/
 
-.highly-rated{
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  margin: 80px 0 20px 0;
+#highly-rated{
+  padding: 20px;
 }
 
-.highly-img{
-  height: 150px;
-  border: 1.2px solid black;
-  border-radius: 8px;
-  margin: 10px;
-}
-
-.highly-text{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 0 0 80px 0;
-}
-
-.camy{
-  font-size: 1.5rem;
-}
-
-/*-------PUSHING-----*/
-
-.pushing-img{
-  width: 500px;
-  margin: 10px 10px 0 0;
-  border: 1.2px solid black;
+.highly img{
+  max-width: 80%;
+  gap: 10px;
+  grid-column: 1/9;
+  justify-self: center;
   border-radius: 8px;
 }
 
-.pushing-section{
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 40px;
-  margin: 60px 0;
-  border-top: 0.4px solid lightgrey;
-  border-bottom: 0.4px solid lightgrey; 
+.highly-h2{
+margin: 30px 0 10px 0;
+text-align: center;
+}
+
+.highly-rated-text{
+  text-align: center;
+  margin: 10px 0 0 0;
+}
+
+.highly.grid{
+  margin: 0;
+}
+
+
+/*-------PUSHING-------------------
+-----------------------------------*/
+
+#pushing{
+  padding: 20px;
 }
 
 .pushing-h2{
   text-align: center;
-  margin: 50px 0;
-  font-weight: 700;
+  margin: 20px 0 20px 0;
+}
+.jacket-info{
+  grid-column: 1/5;
 }
 
-.socials-con {
-  width: 100%;
-  display: flex;
-  align-content: center;
-  justify-content: center; 
+.billie-jkt{
+max-width: 100%;
+border-radius: 8px;
 }
 
-.socials-content { 
-  display: flex;
-  justify-content: space-between;
-  margin: 0 0 70px 0;
+.pad-img{
+max-width: 100%;
+height: auto;
+grid-column: 5/9;
+justify-self: center;
+align-self: self-start;
+border-radius: 8px;
 }
 
-.socials-h2-p{
-  display: flex;
-  flex-direction: column;
-  margin: 40px 0 30px 0; 
+/*------------------Socials----------------*/
+
+#socials{
+  padding: 20px;
 }
 
-.socials-img{
-  width: 370px;
-  border: 1px solid grey;
-  border-radius: 8px; 
+.socials-h2{
+text-align: start;
+}
+.socials-img img{
+  grid-column: 2/9;
+  width: 80%;
+  border-radius: 8px;
 }
 
-.socials-img-3{
-  width: 360px;
-  border: 1px solid grey;
-  border-radius: 8px; 
-}
+
+
+
+
+
+
+
+
+
+
