--- a/payment.css
+++ b/payment.css
@@ -1,27 +1,81 @@
-.container-main-nav{
-  z-index: 1100;
+
+.form-container{
   display: flex;
-  flex-direction: row;
+  width: 800px;
+  height: 100%;
+  padding: 25px 35px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(135deg, #FFF6ED 23.7%, #F1F1F1 137.95%);
+  margin: 60px auto;
+  border: 0.4px solid lightgrey;
+  border-radius: 18px;
+  border: 1px solid black;
+}
+
+
+.container-2-radius{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-container .title{
+  font-size: 2.5rem;
+  margin: 40px 10px;
+}
+
+.form-container-2 .title-2{
+  font-size: 2.5rem;
+  text-align: center;
+  margin: 40px 10px;
+}
+
+.form-container form .user-details{
+  display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
-fieldset > div {
-  margin-bottom: 20px;
-  display: flex;
-  flex-flow: row wrap;
+form .user-details .input-box{
+  width: calc(100% / 2 - 20px);
 }
 
-input + span{
-  position: relative;
+.user-details .input-box input{
+  height: 45px;
+  width: 100%;
+  padding-left: 15px;
+  margin: 10px;
+  
 }
 
-input:required + span::after {
-  font-size: 0.7rem;
-  position: absolute;
-  content: "required";
-  color: white;
-  background-color: black;
-  padding: 5px 10px;
-  top: -26px;
-  left: -70px;
+ .form-container .user-details .details{
+  display: block;
+  font-weight: 700;
+  margin: 5px 0 10px 12px;
 }
+
+
+.submit-btn{
+  font-family: var(--main-font);
+  font-size: var(--button-size);
+  font-weight: bold;
+  border-radius: 25px;
+  background-color: var(--green-main);
+  color: var(--text-light);
+  padding: var(--spacing-medium) var(--spacing-large);
+  border: none;
+  margin: 15px;
+}
+
+.submit-btn:hover{
+  background-color: var(--green-secondary);
+  color: #FFF;
+  cursor: pointer;
+  transition: all 0.20s ease;
+}
+
+
+
+
