--- a/productdetails.css
+++ b/productdetails.css
@@ -5,16 +5,85 @@ border-radius: 0.4rem;
 border: 0.5px solid #6C6969;
 }
 
- .prod-img-2{
-  height: 8rem;
+.prod-img-2{
+  height: 9.3rem;
   margin: 0 0 4px 0;
   border-radius: 0.4rem;
   border: 0.5px solid #6C6969;
 }
 
 .prod-img{
-height: 15rem;
+height: 20rem;
 margin: 0 15px 10px 0;
 border-radius: 0.4rem;
 border: 0.5px solid #6C6969;
+}
+
+.products{
+  width: 100%;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0 40px 0;
+  background: linear-gradient(121deg, #FFF6ED 23.7%, #F1F1F1 137.95%); 
+}
+
+.two-column-prod{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.prod-sum{
+  width: 100%;
+  height: 900px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(121deg, #FFF6ED 23.7%, #F1F1F1 137.95%);
+  border: 0.8 solid gray;
+}
+
+.two-column-prod-sum{
+  width: 50%;
+  height: 50%;
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  position: relative;
+  bottom: 140px;
+}
+
+.col-right{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.col-left{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.prod-button{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  bottom: 300px;
+}
+
+.prod-button .primary-button{
+  margin: 0 0 15px 0;
+  width: 20%;
+  height: 30%;
 }
