--- a/products.css
+++ b/products.css
@@ -1,21 +1,100 @@
-.prod-img{
-height: 15rem;
-margin: 0 0 10px 0;
-border-radius: 0.4rem;
-border: 0.5px solid #6C6969;
+.prod-cards{
+  display: grid;
+  gap: 2em;
+  margin: 40px 0 40px 0;
+  grid-template-columns: repeat(3, 1fr);
+  align-self: center;
+  justify-self: center;
 }
 
-.card-1-con{
-  display: flex;
-  justify-content: space-around;  
-}
-
-.card-2-con{
-  display: flex;
-  justify-content: space-evenly;
-  align-content: center;  
-}
 
 .prod-card{
-  margin: 40px 0;
+  border: 0.4px solid white;
+  box-shadow: 1px 2px 5px rgba(0, 0, 0, .45);
+  max-width: 350px;
+  border-radius: 8px;
+}
+
+.prod-img{
+  max-height: 350px;
+  width: auto;
+  padding: 2em;
+}
+
+.rain-h1{
+  text-align: center;
+  margin: 0 0 20px 0;
+}
+
+.card-text{
+  border: 0.4px solid white;
+  box-shadow: 1px 2px 5px rgba(0, 0, 0, .20);
+  background: linear-gradient(121deg, #FFF6ED 23.7%, #F1F1F1 137.95%);
+  color: #000;
+  padding: 2em;
+}
+
+.h3-card{
+  font-size: 1.5rem;
+}
+
+.p-card{
+  font-size: 1rem;
+}
+
+.primary-button-card{
+  font-family: var(--main-font);
+  font-size: var(--button-size);
+  font-weight: 400;
+  border-radius: 40px;
+  background-color: var(--green-main);
+  color: var(--text-light);
+  border: none;
+  width: 280px;
+  height: 50px;
+  margin: 1em 0 0 0;
+}
+
+.primary-button-card:hover{
+  background-color: var(--green-secondary);
+  cursor: pointer;
+  transition: all 0.20s ease;
+  font-weight: 700;
+}
+/*--------------RAIN HAPPENS----------------*/
+
+.rain-happens-img{
+  align-self: center;
+  justify-self: center;
+  margin: 20px 0 40px 0;
+}
+
+.prod-img-happens{
+  max-width: 800px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 16px;
+}
+
+
+
+
+
+
+
+#heart-checkbox-1, label {
+display: none;
+}
+
+#heart-checkbox-1 + label::before {
+  font-family: "font awesome 5 free";
+  font-weight: 400;
+  content: "\f004";
+  cursor: pointer;
+}
+
+#heart-checkbox-1:checked + label::before{
+  font-weight: 700;
+  color: var(--green-main);
+  cursor: pointer;
 }
