--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,21 @@
   box-sizing: border-box;
 }
 
-body{
-  font-family: var(--main-font);
-  color: var(--text-dark);
-  width: 100%;
-  padding: var(--spacing-small);
-  background-color: #FFF;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+html{
+font-family: var(--main-font);
+color: var(--text-dark);
 }
 
+.site{
+  margin: 1em auto;
+  max-width: 1200px;
+}
+
+#main-logo{
+margin: 10px 0 10px 10px;
+max-height: 85px;
+width: auto;
+}
 
 h1{
   font-family: var(--h1-font);
@@ -23,21 +26,23 @@ h1{
   font-weight: 700;
   width: 100%;
   letter-spacing: -1px;
+  margin: 0;
 }
 
 h2{
   font-family: var(--h2-font);
   font-size: var(--h2-size);
   font-weight: 500;
-  width: 100%;
   letter-spacing: -1px;
+  margin: 0;
 }
 
 p{
   font-family: var(--p-font);
   font-size: var(--p-size);
-  font-weight: 400;
-  line-height: var(--p-height); 
+  font-weight: 200;
+  line-height: var(--p-height);
+  margin: 5px 0 8px 0; 
 }
 
 a{
@@ -53,30 +58,34 @@ a:hover{
 .primary-button{
   font-family: var(--main-font);
   font-size: var(--button-size);
-  font-weight: bold;
-  border-radius: 25px;
+  font-weight: 400;
+  border-radius: 40px;
   background-color: var(--green-main);
   color: var(--text-light);
-  padding: var(--spacing-medium) var(--spacing-large);
   border: none;
-  margin: 15px;
+  width: 250px;
+  height: 50px;
+  margin: 8px 0 0 0;
 }
 
 .primary-button:hover{
   background-color: var(--green-secondary);
   cursor: pointer;
   transition: all 0.20s ease;
+  font-weight: 700;
 }
 
 .buy-button{
   font-family: var(--main-font);
   font-size: var(--button-size);
-  font-weight: bold;
+  font-weight: 500;
   border-radius: 25px;
   background-color: var(--green-main);
   color: var(--text-light);
   padding: var(--spacing-small) var(--spacing-medium);
   border: none;
+  width: 120px;
+  height: 40px;
 }
 
 .buy-button:hover{
@@ -85,202 +94,52 @@ a:hover{
   transition: all 0.20s ease;
 }
 
-.with-arrow{
+
+
+
+
+/*---------------FOOTER----------------*/
+
+.main-footer{
   display: flex;
-  justify-content: center;
   align-items: center;
-}
-
-.with-arrow:hover > img{
-  transform:translateX(4px)
-}
-
-.with-arrow > img{
-  transition: 0.25s ease;
-}
-
-/*NAV*/
-.navbar{
-  display: flex;
   justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  max-width: var(--standard-width);
-  padding: 0 var(--spacing-medium);
-}
-
-.menu-links{
-  color: var(--text-dark);
-  display: flex;
-  list-style: none;
-  justify-content: center;
-  align-items: center;
-}
-
-.menu-links a{
- margin: var(--spacing-medium); 
-}
-.menu-links a:hover{
- text-decoration: underline;
-}
-
-.menu-icons{
-  display: flex;
-  list-style: none;
-  justify-content: center;
-  align-items: center;
-}
-
-.menu-icons a{
-  margin: var(--spacing-small);
-}
-
-.section-container {
-  width: 100%;
-  max-width: var(--standard-width);
-}
-
-.two-column{
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  box-sizing: border-box;
-  margin: 60px 0 60px 0px;
-}
-
-.two-column .col-left{
- width: 50%;
- box-sizing: border-box;
- padding: 0 0 0 30px;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: flex-start;
-transform: translateX(50px);
-}
-
-.two-column .col-right{
-  width: 50%;
-  box-sizing: border-box;
-  padding: 0 0 0 30px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-
-}
-
-.hero-img{
-  width: 14rem;
-  border: 1.2px solid black;
-  border-radius: 8px;
-}
-
-.hero-img-2{
-  width: 12.2rem;
-  border: 1.2px solid black;
-  border-radius: 8px;
-  margin: var(--spacing-small);
-}
-
-.hero-img-container{
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 100px 0;
+  padding: 30px 10px;
+  min-height: 300px;
+  background: linear-gradient(123deg, #FFF6ED 23.7%, #F1F1F1 137.95%);
+ 
+  
 }
 
 
-.highly-container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 20px 0 30px 0;
+
+
+.primary-button-footer{
+  font-family: var(--main-font);
+  font-size: var(--h6-size);
+  font-weight: 400;
+  border-radius: 40px;
+  background-color: var(--green-main);
+  color: var(--text-light);
+  border: none;
+  width: 180px;
+  height: 40px;
 }
 
-.highly-container img{
-  margin: 10px;
-}
-
-.highly-h2{
-  margin: 50px 0 0 100px;
-}
-
-
-.camy{
-  text-align: center;
-}
-
-.camy-btn{
-  transform: translateX(450px);
-}
-
-
-.pushing-h2{
-  text-align: center;
-  margin: 40px 0 40px 0;
-}
-
-
-.pushing-img{
-  width: 300px;
-  margin: 10px;
-  border: 1.2px solid black;
-  border-radius: 8px;
-}
-
-.pushing-container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 50px 0 80px 0;
-}
-
-.pushing-left{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-.pushing-right{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-
-.socials-content{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-}
-.socials-img{
-  width: 300px;
-  border: 1px solid grey;
-  border-radius: 8px; 
-  margin: 10px;
-}
-
-.socials-img-3{
-  width: 360px;
-  margin: 10px;
-   border: 1px solid grey;
-  border-radius: 8px; 
-}
-
-.circle{
-  width: 60px;
-  height: 60px;
-  background-color: var(--green-secondary);
-  border-radius: 50%;
+.soc-ico{
   display: inline-block;
-  position: absolute;
-  left: 180px;
-  bottom: -10px;
+}
+
+
+
+
+
+/*Reset*/
+body, p, a, ul, li{
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+li{
+  list-style-type: none;
 }
