--- a/variables.css
+++ b/variables.css
@@ -6,17 +6,17 @@
   --h1-font: 'alexandria';
   --h2-font: 'albert sans';
   --p-font: 'albert sans';
-  --h1-size: 4rem;
-  --h2-size: 2.5rem;
-  --h3-size: 2.5rem;
-  --h4-size: 2rem;
-  --h5-size: 1.75rem;
-  --h6-size: 1.375rem;
-  --p-size: 1.125;
-  --p-height: 26px;
-  --button-size: 1rem;
-  --green-main: #2F515E;
-  --green-secondary: #B3C2C0;
+  --h1-size: 2.125rem;
+  --h2-size: 1.875rem;
+  --h3-size: 1.5rem;
+  --h4-size: 1.25rem;
+  --h5-size: 1.125rem;
+  --h6-size: 1rem;
+  --p-size: 1.25rem;
+  --p-height: 32px;
+  --button-size: 1.125rem;
+  --green-main: #113340;
+  --green-secondary: #38515B;
 
 /*Space*/
 --spacing-small: 8px;
@@ -24,12 +24,12 @@
 --spacing-large: 32px;
 --spacing-xl: 64px;
 
---standard-width: 1144px;
+--standard-width: 1200px;
 
 
 /*BACKGROUND*/
 --bg-white: #FFF;
---bg-beige: #(121deg, #FFF6ED 23.7%, #F1F1F1 137.95%);
+--bg-beige: linear-gradient(121deg, #FFF6ED 23.7%, #F1F1F1 137.95%);
 
 
 }
